--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,13 @@ LOG_ERROR=true
 LOG_DEBUG=true
 
 TEST_MATCH=/home/guido/Escritorio/snap-msg/app/test/*.test.ts
+
+TWITSNAP_URL=https://api.twitter.com/
+
+BAN_USER_PATH=TODO/
+GET_USER_PATH=TODO/
+GET_USERS_PATH=TODO/
+
+BLOCK_TWEET_PATH=TODO/
+GET_TWEETS_PATH=TODO/
+GET_TWIT_PATH=TODO/
