Add new envVars, fix bugs

--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,12 @@ LOG_DEBUG=true
 
 TEST_MATCH=/home/guido/Escritorio/snap-msg/app/test/*.test.ts
 
-TWITSNAP_URL=https://api.twitter.com/
+TWITSNAP_URL=https://twitsnap-apps-gateway.onrender.com
 
-BAN_USER_PATH=TODO/
-GET_USER_PATH=TODO/
-GET_USERS_PATH=TODO/
+BAN_USER_PATH=v1/admin/users/
+GET_USER_PATH=v1/admin/users/
+GET_USERS_PATH=v1/admin/users/
 
-BLOCK_TWEET_PATH=TODO/
-GET_TWEETS_PATH=TODO/
-GET_TWIT_PATH=TODO/
+BLOCK_TWEET_PATH=v1/twit/admin/block/
+GET_TWEETS_PATH=v1/twit/admin/posts/
+GET_TWIT_PATH=v1/twit/admin/post/
