--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_DEBUG=true
 
 TEST_MATCH=/home/guido/Escritorio/snap-msg/app/test/*.test.ts
 
-TWITSNAP_URL=https://twitsnap-apps-gateway.onrender.com
+TWITSNAP_URL=https://twitsnap-apps-gateway.onrender.com/
 
 BAN_USER_PATH=v1/admin/users/
 GET_USER_PATH=v1/admin/users/
