--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ TWITSNAP_URL=https://twitsnap-apps-gateway.onrender.com/
 BAN_USER_PATH=api/v1/admin/users/
 GET_USER_PATH=api/v1/admin/users/
 GET_USERS_PATH=api/v1/admin/users/
+GET_METRICS_PATH=api/v1/admin/users/metrics
 
 BLOCK_TWEET_PATH=v1/twit/admin/block
 GET_TWEETS_PATH=v1/twit/admin/posts/
