--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,8 @@ GET_METRICS_PATH=api/v1/admin/users/metrics
 BLOCK_TWEET_PATH=v1/twit/admin/block
 GET_TWEETS_PATH=v1/twit/admin/posts/
 GET_TWIT_PATH=v1/twit/admin/post
+
+GET_SERVICE_PATH=/v1/registry/service
+GET_SERVICES_PATH=/v1/registry/service
+CHANGE_SERVICE_STATUS_PATH=/v1/registry/service/status
+CREATE_SERVICE_PATH=/v1/registry/service
